--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+<header>
+
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">DEIÀ</a>
@@ -43,10 +46,38 @@
     </div>
 </nav>
 
+<div class="cont-pr container text-center m-3">
+    <div class="row">
+      <div class="col-xl-3 col-md-6">
+       Nuesta historia
+      </div>
+      <div class="col-xl-3 col-md-6">
+        x Patagonia
+      </div>
+      <div class="col-xl-3 col-md-6">
+        Salvemos el mar
+      </div>
+       <div class="col-xl-3 col-md-6">
+        Colabora
+      </div>
+    </div>
+  </div>
+<nav>
+
+    <h1>
+        DEIA
+    </h1>
+</nav>
+
+</header>
+
+
 <!-- Enlace a jQuery y Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 
 </body>
 </html>
