--- a/index.html
+++ b/index.html
@@ -11,42 +11,46 @@
 <header>
 
 
-
+<!-- MENÚ -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">DEIÀ</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#historia">Nuestra historia</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Best-sellers</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#productos" id="navbarDropdown" role="button" data-toggle="dropdown" 
-                aria-haspopup="true" aria-expanded="false">
-                    Productos
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#baño">Ropa de baño</a>
-                    <a class="dropdown-item" href="#playa">Ropa de playa</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="accesorios">Accesorios</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
-            </li>
-        </ul>
+    <div class="container">
+
+        <!-- BOTON -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto flex-row"> 
+                <li class="nav-item">
+                    <a class="nav-link" href="#historia">Nuestra historia</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Productos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#baño">Ropa de baño</a>
+                        <a class="dropdown-item" href="#playa">Ropa de playa</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#accesorios">Accesorios</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Best-sellers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 
-<div class="cont-pr container text-center m-3">
+
+<div class="cont-pr container text-center m-6">
     <div class="row">
       <div class="col-xl-3 col-md-6">
        Nuesta historia
@@ -62,12 +66,10 @@
       </div>
     </div>
   </div>
-<nav>
 
-    <h1>
-        DEIA
-    </h1>
-</nav>
+
+    <p class="text-center">DEIÀ</p>
+
 
 </header>
 
