--- a/index.html
+++ b/index.html
@@ -3,83 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Desplegable </title>
-    <!-- Enlace a Bootstrap CSS -->
+    <title>Menú Desplegable</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css"> 
+
 </head>
+
 <body>
+
 <header>
+    <!-- MENÚ -->
+    <nav class="navbar navbar-light bg-transparent"> 
+        <div class="container-fluid"> 
+
+    <!-- BOTÓN HAMBURGUESA -->
+
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
+    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+     </button>
 
 
-<!-- MENÚ -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-
-        <!-- BOTON -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto flex-row"> 
-                <li class="nav-item">
-                    <a class="nav-link" href="#historia">Nuestra historia</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Productos
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#baño">Ropa de baño</a>
-                        <a class="dropdown-item" href="#playa">Ropa de playa</a>
-                        <div class="dropdown-divider"></div>
+     <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
+         <ul class="navbar-nav w-100 d-flex flex-row justify-content-between">
+             <li class="nav-item flex-grow-1 text-center">
+                 <a class="nav-link text-white" href="#historia">Nuestra historia</a>
+             </li>
+             <li class="nav-item dropdown flex-grow-1 text-center">
+                 <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" 
+                           role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Productos
+                </a>
+         <div class="dropdown-menu">
+                <a class="dropdown-item" href="#baño">Ropa de baño</a>
+                 <a class="dropdown-item" href="#playa">Ropa de playa</a>
+                    <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#accesorios">Accesorios</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Best-sellers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
-                </li>
-            </ul>
+                     </div>
+                    </li>
+                    <li class="nav-item flex-grow-1 text-center">
+                        <a class="nav-link text-white" href="#">Best-sellers</a>
+                    </li>
+                    <li class="nav-item flex-grow-1 text-center">
+                        <a class="nav-link text-white" href="#">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Informacion menu principal -->
+
+    <div class="container overflow-hidden text-center">
+        <div class="row g-0 text-center">
+            <div class="col-sm-6 col-md-8">
+                <p><a href="#nuestrahistoria1" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Nuestra historia</a></p>
+            </div>
+            <div class="col-6 col-md-4">
+                <p><a href="#xPatagonia" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">xPatagonia</a></p>
+            </div>
+        </div>
+        <div class="row g-0 text-center">
+            <div class="col-6 col-md-4">
+                <p><a href="#nuestrahistoria1" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Salvemos el mar</a></p></div>
+            <div class="col-sm-6 col-md-8"> <p><a href="#nuestrahistoria1" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Colabora</a></p></div>
         </div>
     </div>
-</nav>
 
 
-<div class="cont-pr container text-center m-6">
-    <div class="row">
-      <div class="col-xl-3 col-md-6">
-       Nuesta historia
-      </div>
-      <div class="col-xl-3 col-md-6">
-        x Patagonia
-      </div>
-      <div class="col-xl-3 col-md-6">
-        Salvemos el mar
-      </div>
-       <div class="col-xl-3 col-md-6">
-        Colabora
-      </div>
-    </div>
-  </div>
-
-
-    <p class="text-center">DEIÀ</p>
+    <p class="text-center mt-4 display-1 fw-bold text-white">DEIÀ</p> 
 
 
 </header>
-
 
 <!-- Enlace a jQuery y Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
 
 </body>
 </html>
