--- a/index.html
+++ b/index.html
@@ -52,7 +52,67 @@
         </div>
     </nav>
 
-    <!-- Informacion menu principal -->
+
+
+
+
+
+
+ <!-- MENÚ -->
+ <nav class="navbar navbar-light bg-transparent">
+    <div class="container-fluid">
+       
+     <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
+            <ul class="navbar-nav w-100 d-flex flex-row justify-content-between">
+                <li class="nav-item flex-grow-1 text-center">
+                    <a class="nav-link text-white" id="historia" href="#historia">Nuestra historia</a>
+                </li>
+                <li class="nav-item dropdown flex-grow-1 text-center">
+                    <a class="nav-link text-white" id="productos" href="#patagonia">x Patagonia</a>
+                </li>
+                <li class="nav-item flex-grow-1 text-center">
+                    <a class="nav-link text-white" id="mar" href="#mar">Salvemos el mar</a>
+                </li>
+                <li class="nav-item flex-grow-1 text-center">
+                    <a class="nav-link text-white" id="colabora" href="#colabora">Colabora</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+</header>
+
+
+
+
+
+
+
+ <!-- Informacion menu principal 
+ <div class="container overflow-hidden text-center">
+    <div class="row g-0 text-center">
+        <div class="col-sm-6 col-md-8">
+            <p><a href="#nuestrahistoria1" id="patagonia" 
+                  class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Nuestra historia</a></p>
+        </div>
+        <div class="col-6 col-md-4">
+            <p><a href="#xPatagonia" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">xPatagonia</a></p>
+        </div>
+    </div>
+    <div class="row g-0 text-center">
+        <div class="col-6 col-md-4">
+            <p><a href="#nuestrahistoria1" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Salvemos el mar</a></p>
+        </div>
+        <div class="col-sm-6 col-md-8">
+            <p><a href="#nuestrahistoria1" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Colabora</a></p>
+        </div>
+    </div>
+</div>
+
+
+
+
+ Informacion menu principal 
 
     <div class="container overflow-hidden text-center">
         <div class="row g-0 text-center">
@@ -69,6 +129,7 @@
             <div class="col-sm-6 col-md-8"> <p><a href="#nuestrahistoria1" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Colabora</a></p></div>
         </div>
     </div>
+-->
 
 
     <p class="text-center mt-4 display-1 fw-bold text-white">DEIÀ</p> 
@@ -80,6 +141,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
