--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     <!-- MENÚ HAMBURGUESA -->
     <nav class="navbar navbar-light bg-transparent">
         <div class="container-fluid justify-content-end">
-            <!-- Botón hamburguesa siempre visible -->
+           
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <!-- Contenido del menú desplegable -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav w-100 d-flex justify-content-around text-center flex-row">
                     <li class="nav-item">
@@ -45,6 +44,7 @@
             </div>
         </div>
     </nav>
+
     <!-- INFORMACIÓN -->
 
     <div class="container overflow-hidden text-center mt-5">
@@ -64,9 +64,8 @@
     <p class="text-center mt-4 display-1 fw-bold text-white">DEIÀ</p> 
 </header>
 
-<!-- Bootstrap JS, Popper.js, and jQuery -->
+<!-- Bootstrap JS, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="script.js"></script>
 
