Imagenes con texto y cambio de tamaño al content de los textos con hover

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="container overflow-hidden text-center mt-5">
 
-        <div class="row g-0 text-center hoverable d-flex justify-content-center align-items-center" style="min-height: 60vh;">
+        <div class="row g-0 text-center hoverable d-flex justify-content-center align-items-center" style="min-height: 20vh;">
 
                 <div class="p-3 nav-link text-white col-sm-6 col-md-8 hover-link" data-bg="#FF6347" href="#historia">Nuestra historia</div>
                 <div class="p-3 nav-link text-white col-6 col-md-4 hover-link" data-bg="#FFD700" href="#patagonia">Productos</div>
@@ -63,6 +63,49 @@
 
     <p class="text-center mt-4 display-1 fw-bold text-white">DEIÀ</p> 
 </header>
+
+<!-- Sección de Historia -->
+
+<div class="container"> 
+<section id="historia" class="container mt-5">
+    <h2 class="text-white"> Nuestra Historia</h2>
+    <p class="text-white">
+        Desde nuestros inicios, hemos estado comprometidos con la preservación de nuestro entorno y la promoción de una vida sostenible. Nuestra historia comienza en un pequeño pueblo, donde la conexión con la naturaleza nos enseñó la importancia de cuidar nuestro hogar. A través de los años, hemos trabajado incansablemente para crear conciencia y fomentar prácticas que protejan nuestro planeta.
+    </p>
+    
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <img src="https://picsum.photos/200" class="img-fluid" alt="...">
+        </div>
+        <div class="col-md-6">
+            <p class="text-white">
+                A medida que crecimos, expandimos nuestras iniciativas, abriendo programas educativos y colaboraciones con comunidades locales. Creemos que cada pequeño esfuerzo cuenta y que juntos podemos hacer una diferencia significativa. La historia de nuestro compromiso con el medio ambiente continúa, y te invitamos a ser parte de ella.
+            </p>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <img src="https://picsum.photos/200" class="img-fluid" alt="...">
+        </div>
+        <div class="col-md-6">
+            <p class="text-white">
+                A medida que crecimos, expandimos nuestras iniciativas, abriendo programas educativos y colaboraciones con comunidades locales. Creemos que cada pequeño esfuerzo cuenta y que juntos podemos hacer una diferencia significativa. La historia de nuestro compromiso con el medio ambiente continúa, y te invitamos a ser parte de ella.
+            </p>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <img src="https://picsum.photos/200" class="img-fluid" alt="...">
+        </div>
+        <div class="col-md-6">
+            <p class="text-white">
+                A medida que crecimos, expandimos nuestras iniciativas, abriendo programas educativos y colaboraciones con comunidades locales. Creemos que cada pequeño esfuerzo cuenta y que juntos podemos hacer una diferencia significativa. La historia de nuestro compromiso con el medio ambiente continúa, y te invitamos a ser parte de ella.
+            </p>
+        </div>
+    </div>
+
+</section>
+</div>
 
 <!-- Bootstrap JS, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
