Primera frase home page

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
   <header class="custom-header">
     <nav class="navbar navbar-light bg-transparent fixed-top">
         <div class="container-fluid justify-content-end">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler btn-lg" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon border "></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse bg-dark" id="navbarNav">
                 <ul class="navbar-nav w-100">
                     <li class="nav-item">
-                        <a class="nav-link text-white hover-link" href="#historia">Nuestra historia</a>
+                        <h1 class="nav-link text-white hover-link fs-2 fw-bold" href="#historia">Nuestra historia</h1>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white hover-link" href="#patagonia">x Patagonia</a>
+                        <h1 class="nav-link text-white hover-link fs-2 fw-bold" href="#patagonia">x Patagonia</h1>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white hover-link" href="#mar">Salvemos el mar</a>
+                        <h1 class="nav-link text-white hover-link fs-2 fw-bold" href="#mar">Salvemos el mar</h1>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white hover-link" href="#colabora">Colabora</a>
+                        <h1 class="nav-link text-white hover-link fs-2 fw-bold" href="#colabora">Colabora</h1>
                     </li>
                 </ul>
             </div>
@@ -45,16 +45,16 @@
 
     <div class="container overflow-hidden text-center mt-5">
         <div class="row g-0 hoverable justify-content-center align-items-center" style="min-height: 20vh;">
-            <div class="p-3 hover-link col-sm-6 col-md-8" data-bg="img/FONDO2.jpg">
+            <div class="p-3 hover-link col-sm-6 col-md-8" data-bg="img/collage1.webp">
                 <span class="font-weight-thin" style="font-size: 1.5rem;">NUESTRA HISTORIA</span>
             </div>
-            <div class="p-3 hover-link col-6 col-md-4" data-bg="img/FONDO1.jpg">
+            <div class="p-3 hover-link col-6 col-md-4" data-bg="img/collage4.webp">
                 <span class="font-weight-thin" style="font-size: 1.5rem;">PRODUCTOS</span>
             </div>
-            <div class="hover-link col-3 col-md-4" data-bg="img/MAR_FONDO.jpg">
+            <div class="hover-link col-3 col-md-4" data-bg="img/collage2.webp">
                 <span class="font-weight-thin" style="font-size: 1.5rem;">SALVEMOS EL MAR</span>
             </div>
-            <div class="hover-link col-sm-3 col-md-8" data-bg="img/FOTO_HOVER.jpg">
+            <div class="hover-link col-sm-3 col-md-8" data-bg="img/collage3.webp">
                 <span class="font-weight-thin" style="font-size: 1.5rem;">COLABORA</span>
             </div>
         </div>
@@ -63,23 +63,20 @@
             <img src="img/logos deia color-05 2.png" alt="Logo DEIÀ" class="img-fluid" style="max-width: 40%;">
         </div>
     </div>
-</header>
-
-
-
 
 <div class="video-container">
   <video autoplay muted loop class="video-bg">
       <source src="img/VIDEOHEADER.mp4" type="video/mp4">
-      Un tributo a nuestra isla madre
   </video>
-
-  <div class="overlay d-flex justify-content-center align-items-center">
-      <h1 class="text-white text-center display-4">Un tributo a nuestra isla madre</h1>
-  </div>
 </div>
 
+</header>
 
+<div class="d-flex justify-content-center align-items-center vh-100">
+  <div class="text-center p-5">
+    <p class="display-1 fw-bold mb-5" style="font-size: 8vw;">UN TRIBUTO A NUESTRA ISLA MADRE</p>
+  </div>
+</div>
 
 
 
