Cambio en estilos, maquetacion de textos

--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
 
 <div class="d-flex justify-content-center align-items-center vh-100">
   <div class="text-center p-5">
-    <p class="display-1 fw-bold mb-5" style="font-size: 8vw;">UN TRIBUTO A NUESTRA ISLA MADRE</p>
+    <p class="display-1 texto-negrita font-weight-bold " style="font-size: 9vw;">UN TRIBUTO A NUESTRA ISLA MADRE</p>
   </div>
 </div>
 
-
-
-
-
   <div class="container mt-5">
     <div class="row">
-        <div class="col-md-6 position-relative">
-            <img src="img/sustain.jpg" class="img-fluid" alt="Bikini colgando">
-            <h1 class="overlay-text display-1 text-white font-weight-bold position-absolute top -0 start-50 translate-middle text-end"> <!-- Texto superpuesto alineado a la derecha -->
-                Colaborando con ECONYL reciclamos basura rescatada del mar para darles una segunda vida.
+        <div class="col-md-6 position-relative ">
+            <img src="img/sustain.jpg" class="img-fluid" alt="Bikini colgando" class="img-fluid">
+          </div>
+          <div class="col-md-6 texto-colaboracion font-weight-bold text-end badge bg-primary text-wrap " >
+            Colaborando con ECONYL reciclamos basura rescatada del mar para darles una segunda vida.
+        </div>
+            <!-- <h1 class="overlay-text1 display-1 text-white font-weight-bold position-absolute top -0 start-50 translate-middle text-end"> <!Texto superpuesto alineado a la derecha -->
+                <!-- Colaborando con ECONYL reciclamos basura rescatada del mar para darles una segunda vida. --> 
             </h1>
         </div>
     </div>
@@ -96,9 +96,9 @@
 <div class="container mt-5">
   <div class="row justify-content mt-2">
       <div class="col-12 position-relative"> 
-          <img src="img/ECONYL.webp" class="img-fluid w-100" alt="Descripción de la imagen">
+          <img src="img/ECONYL.azul.png" class="img-fluid w-100" alt="Descripción de la imagen">
 
-          <h1 class="overlay-text display-1 text-white font-weight-bold position-absolute top-50 start-50 translate-middle text-center">
+          <h1 class="overlay-text display-1 text-white font-weight-bold position-absolute top-40 start-40 translate-middle text-center">
               Preservamos el planeta con nuestros bikinis ECO.
           </h1>
       </div>
