--- a/index.html
+++ b/index.html
@@ -72,9 +72,15 @@
 
 </header>
 
-<div class="d-flex justify-content-center align-items-center vh-100">
+<div class="d-flex flex-column justify-content-center align-items-center vh-100 position-relative">
   <div class="text-center p-5">
-    <p class="display-1 texto-negrita font-weight-bold " style="font-size: 9vw;">UN TRIBUTO A NUESTRA ISLA MADRE</p>
+    <p class="display-1 texto-negrita font-weight-bold" style="font-size: 9vw;">UN TRIBUTO A NUESTRA ISLA MADRE</p>
+  </div>
+
+  <div class="wave" style="height: 150px; overflow: hidden; position: absolute; bottom: 0; left: 0; right: 0;">
+    <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+      <path d="M-0.84,-1.47 C302.76,130.75 207.95,82.39 525.11,-6.41 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #ffffff;"></path>
+    </svg>
   </div>
 </div>
 
