--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                         <h1 class="nav-link text-white hover-link fs-2 fw-bold" href="#patagonia">x Patagonia</h1>
                     </li>
                     <li class="nav-item">
-                        <h1 class="nav-link text-white hover-link fs-2 fw-bold" href="#mar">Salvemos el mar</h1>
+                      <a href="salvemos-el-mar.html" class="nav-link text-white hover-link fs-2 fw-bold">Salvemos el mar</a>
+                        <!-- <h1 class="nav-link text-white hover-link fs-2 fw-bold" href="nueva_pagina.html">Salvemos el mar</h1>
+                        <a class="nav-link" href="nueva_pagina.html">Nueva Página</a>  -->
                     </li>
                     <li class="nav-item">
                         <h1 class="nav-link text-white hover-link fs-2 fw-bold" href="#colabora">Colabora</h1>
