Linkear a nueva pagina, nuevo html, css y js
linkeo de nueva pagina, cambios carrousel, arreglar errores Milena.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -52,7 +52,8 @@
               <span class="font-weight-thin" style="font-size: 1.5rem;">PRODUCTOS</span>
           </div>
           <div class="hover-link col-3 col-md-4" data-bg="img/collage2.webp">
-              <span class="font-weight-thin" style="font-size: 1.5rem;">CREA TU BIKINI</span>
+            <button type="button" class="btn mb-2">Productos</button>
+              <a href="nuevapagina.html" class="font-weight-thin" style="font-size: 1.5rem;">CREA TU BIKINI</a>
           </div>
           <div class="hover-link col-sm-3 col-md-8" data-bg="img/collage3.webp">
               <span class="font-weight-thin" style="font-size: 1.5rem;">COLABORA</span>
