Carrousel con movimiento
Arreglo errores al hacer merge

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
     </nav>
 
-    <div class="container overflow-hidden text-center mt-5">
-        <div class="row g-0 hoverable justify-content-center align-items-center" style="min-height: 20vh;">
+    <div class="container overflow-hidden text-center mt-0 pt-0">
+        <div class="row g-0 mt-5 justify-content-center align-items-center" style="min-height: 20vh;">
             <div class="p-3 hover-link col-sm-6 col-md-8" data-bg="img/collage1.webp">
                 <span class="font-weight-thin" style="font-size: 1.5rem;">NUESTRA HISTORIA</span>
             </div>
@@ -60,6 +60,9 @@
             </div>
             <div class="hover-link col-sm-3 col-md-8" data-bg="img/collage3.webp">
                 <span class="font-weight-thin" style="font-size: 1.5rem;">COLABORA</span>
+            </div>
+            <div class="hover-link col-3 col-md-4" data-bg="img/collage2.webp">
+                <a href="nuevapagina.html" class="font-weight-thin" style="font-size: 1.5rem;">CREA TU BIKINI</a>
             </div>
         </div>
 
@@ -78,7 +81,7 @@
     
   
 
-
+<!-- 
     <div class="container overflow-hidden text-center d-none d-md-block" id="contentToHide">
       <div class="row g-0 hoverable justify-content-center align-items-center" style="min-height: 20vh;">
           <div class="p-3 hover-link col-sm-6 col-md-8" data-bg="img/collage1.webp">
@@ -94,12 +97,8 @@
           <div class="hover-link col-sm-3 col-md-8" data-bg="img/collage3.webp">
               <span class="font-weight-thin" style="font-size: 1.5rem;">COLABORA</span>
           </div>
-      </div>
+      </div> -->
   
-      <div class="text-logo text-center mt-1">
-          <img src="img/logos deia color-05 2.png" alt="Logo DEIÀ" class="img-fluid" style="max-width: 40%;">
-      </div>
-  </div>
   
 
 <div class="video-container">
@@ -145,7 +144,7 @@
 
 <div class="container mt-5">
   <div class="row">
-      <div class="col-md-6 d-flex align-items-center justify-content-center texto-colaboracion font-weight-bold text-center text-wrap" style="font-size: 3vw;" data-aos="fade-right">
+      <div class="col-md-6 d-flex align-items-center justify-content-center texto-colaboracion font-weight-bold text-center text-wrap bg-light" style="font-size: 3vw; padding: 20px;" data-aos="fade-right">
           Colaborando con ECONYL reciclamos basura rescatada del mar para darles una segunda vida.
       </div>
       <div class="col-md-6 position-relative d-flex align-items-center" data-aos="fade-left">
@@ -159,7 +158,7 @@
 
 
  <!-- Texto animado separado -->
- <div class="row mt-5 justify-content-center">
+ <div class="row mt-5 texto-frase justify-content-center">
   <div class="col-md-10 col-lg-8">
     <p class="text-center display-2 fw-bold fst-italic" style="font-size: 3vw;" data-aos="fade-up">
       "Mirando hacia atrás en los últimos diez años, la evolución de Deia ha sido una de empoderamiento. Muchas cosas han cambiado, pero los valores fundamentales de sostenibilidad, inclusión y comunidad de Deia siguen siendo los mismos."
