--- a/nuevapagina.html
+++ b/nuevapagina.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HELLO BOOSTRAP</title>
-    <!-- Cargar bootstrap 5 -->
+    <title>HELLO BOOTSTRAP</title>
+    <!-- Cargar Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="nuevapagina.css">
-
 </head>
 <body>
-    <!-- AGREGAMOS EL JS DESDE BOOSTRAP -->
-
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg my-navbarcolor" data-bs-theme="dark"> 
+    <nav class="navbar navbar-expand-lg my-navbarcolor" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,16 +32,17 @@
         </div>
     </nav>
 
-    <!-- GALERIA -->
+    <!-- GALERÍA CON CARRUSEL -->
     <div class="container text-center my-4">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="false">
+        <!-- Primer Carrusel -->
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1500">
             <div class="carousel-inner">
+                <!-- Slide 1 -->
                 <div class="carousel-item active">
-                    <div class="row justify-content-center">
-                        <!-- Fila 1 -->
+                    <div class="row">
                         <div class="col">
                             <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1.jpg" class="card-img-top rounded-circle" alt="...">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1.jpg" class="card-img-top rounded-circle" alt="Bora">
                                 <div class="card-body">
                                     <h5 class="card-title">Bora</h5>
                                     <p class="card-text">XS S M L</p>
@@ -55,7 +52,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia.jpg" class="card-img-top rounded-circle" alt="...">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia.jpg" class="card-img-top rounded-circle" alt="Coral">
                                 <div class="card-body">
                                     <h5 class="card-title">Coral</h5>
                                     <p class="card-text">XS S M L</p>
@@ -63,34 +60,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 2.jpg" class="card-img-top rounded-circle" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Breeze</h5>
-                                    <p class="card-text">XS S M L</p>
-                                    <a href="#" class="btn btn-primary">Add to cart</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 3.jpg" class="card-img-top rounded-circle" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Sunkissed</h5>
-                                    <p class="card-text">XS S M L</p>
-                                    <a href="#" class="btn btn-primary">Add to cart</a>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
+                <!-- Slide 2 -->
                 <div class="carousel-item">
-                    <div class="row justify-content-center">
-                        <!-- Fila 2 -->
+                    <div class="row">
                         <div class="col">
                             <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 9.jpg" class="card-img-top rounded-circle" alt="...">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 9.jpg" class="card-img-top rounded-circle" alt="Aquamarine">
                                 <div class="card-body">
                                     <h5 class="card-title">Aquamarine</h5>
                                     <p class="card-text">XS S M L</p>
@@ -100,7 +77,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 10.jpg" class="card-img-top rounded-circle" alt="...">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 10.jpg" class="card-img-top rounded-circle" alt="Aqua">
                                 <div class="card-body">
                                     <h5 class="card-title">Aqua</h5>
                                     <p class="card-text">XS S M L XL</p>
@@ -108,11 +85,31 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Controles de navegación -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- Segundo Carrusel -->
+        <div id="carouselExampleLeft" class="carousel slide my-4" data-bs-ride="carousel" data-bs-interval="100">
+            <div class="carousel-inner">
+                <!-- Slide 1 -->
+                <div class="carousel-item active">
+                    <div class="row">
                         <div class="col">
                             <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 11.jpg" class="card-img-top rounded-circle" alt="...">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 1.jpg" class="card-img-top rounded-circle" alt="Sunset">
                                 <div class="card-body">
-                                    <h5 class="card-title">Tropic</h5>
+                                    <h5 class="card-title">Sunset</h5>
                                     <p class="card-text">XS S M L</p>
                                     <a href="#" class="btn btn-primary">Add to cart</a>
                                 </div>
@@ -120,9 +117,34 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 1.jpg" class="card-img-top rounded-circle" alt="...">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 2.jpg" class="card-img-top rounded-circle" alt="Breeze">
                                 <div class="card-body">
-                                    <h5 class="card-title">Sunset</h5>
+                                    <h5 class="card-title">Breeze</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 2 -->
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 3.jpg" class="card-img-top rounded-circle" alt="Sunkissed">
+                                <div class="card-body">
+                                    <h5 class="card-title">Sunkissed</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 4.jpg" class="card-img-top rounded-circle" alt="Coral">
+                                <div class="card-body">
+                                    <h5 class="card-title">Coral</h5>
                                     <p class="card-text">XS S M L</p>
                                     <a href="#" class="btn btn-primary">Add to cart</a>
                                 </div>
@@ -131,10 +153,19 @@
                     </div>
                 </div>
             </div>
+            <!-- Controles de navegación -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleLeft" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleLeft" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
 
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="nuevapagina.js"></script>
 </body>
 </html>
