--- a/nuevapagina.html
+++ b/nuevapagina.html
@@ -6,6 +6,7 @@
     <title>HELLO BOOTSTRAP</title>
     <!-- Cargar Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="nuevapagina.css">
 </head>
 <body>
     <!-- NAVBAR -->
@@ -34,8 +35,8 @@
 
     <!-- GALERÍA CON CARRUSEL -->
     <div class="container text-center my-4">
-        <!-- Primer Carrusel -->
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1500">
+        <!-- Carrusel -->
+        <div id="carouselExampleRight" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
             <div class="carousel-inner">
                 <!-- Slide 1 -->
                 <div class="carousel-item active">
@@ -60,11 +61,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- Slide 2 -->
-                <div class="carousel-item">
-                    <div class="row">
                         <div class="col">
                             <div class="card">
                                 <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 9.jpg" class="card-img-top rounded-circle" alt="Aquamarine">
@@ -87,29 +83,34 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- Controles de navegación -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-
-        <!-- Segundo Carrusel -->
-        <div id="carouselExampleLeft" class="carousel slide my-4" data-bs-ride="carousel" data-bs-interval="100">
-            <div class="carousel-inner">
-                <!-- Slide 1 -->
-                <div class="carousel-item active">
+                <!-- Slide 2 -->
+                <div class="carousel-item">
                     <div class="row">
                         <div class="col">
                             <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 1.jpg" class="card-img-top rounded-circle" alt="Sunset">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia.jpg" class="card-img-top rounded-circle" alt="Coral">
                                 <div class="card-body">
-                                    <h5 class="card-title">Sunset</h5>
+                                    <h5 class="card-title">Coral</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 3.jpg" class="card-img-top rounded-circle" alt="Sunkissed">
+                                <div class="card-body">
+                                    <h5 class="card-title">Sunkissed</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 14.jpg" class="card-img-top rounded-circle" alt="Coral">
+                                <div class="card-body">
+                                    <h5 class="card-title">Coral</h5>
                                     <p class="card-text">XS S M L</p>
                                     <a href="#" class="btn btn-primary">Add to cart</a>
                                 </div>
@@ -127,9 +128,80 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <!-- Controles de navegación -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRight" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRight" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- Segunda fila del carrusel -->
+        <div id="carouselExampleLeft" class="carousel slide my-4" data-bs-ride="carousel" data-bs-interval="2000">
+            <div class="carousel-inner">
+                <!-- Slide 1 -->
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1.jpg" class="card-img-top rounded-circle" alt="Bora">
+                                <div class="card-body">
+                                    <h5 class="card-title">Bora</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia.jpg" class="card-img-top rounded-circle" alt="Coral">
+                                <div class="card-body">
+                                    <h5 class="card-title">Coral</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 9.jpg" class="card-img-top rounded-circle" alt="Aquamarine">
+                                <div class="card-body">
+                                    <h5 class="card-title">Aquamarine</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 10.jpg" class="card-img-top rounded-circle" alt="Aqua">
+                                <div class="card-body">
+                                    <h5 class="card-title">Aqua</h5>
+                                    <p class="card-text">XS S M L XL</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- Slide 2 -->
                 <div class="carousel-item">
                     <div class="row">
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia.jpg" class="card-img-top rounded-circle" alt="Coral">
+                                <div class="card-body">
+                                    <h5 class="card-title">Coral</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col">
                             <div class="card">
                                 <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 3.jpg" class="card-img-top rounded-circle" alt="Sunkissed">
@@ -142,9 +214,19 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 4.jpg" class="card-img-top rounded-circle" alt="Coral">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 14.jpg" class="card-img-top rounded-circle" alt="Coral">
                                 <div class="card-body">
                                     <h5 class="card-title">Coral</h5>
+                                    <p class="card-text">XS S M L</p>
+                                    <a href="#" class="btn btn-primary">Add to cart</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="img/Bikini_Personaliza_Mesa de trabajo 1 copia 2.jpg" class="card-img-top rounded-circle" alt="Breeze">
+                                <div class="card-body">
+                                    <h5 class="card-title">Breeze</h5>
                                     <p class="card-text">XS S M L</p>
                                     <a href="#" class="btn btn-primary">Add to cart</a>
                                 </div>
@@ -153,6 +235,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- Controles de navegación -->
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleLeft" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
