--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </div>
 <div class="video-container container-fluid p-0">
     <div class="row no-gutters">
-      <div class="col-12 d-none d-lg-block">
+      <div class="col-12  d-lg-block">
         <!-- Video para pantallas grandes (ordenador) -->
         <video autoplay muted loop class="video-bg ">
           <source src="img/VIDEOHEADER.mp4" type="video/mp4">
@@ -144,7 +144,7 @@
     
 
     <!-- ANIMACIÓN DE NÚMEROS -->
-    <div class="row text-center p-4 metrics-container bg-dark-blue">
+    <div class="row text-center p-4 metrics-container bg-dark-blue m-0">
         <!-- Métrica 1 -->
         <div class="col-md-3">
             <img src="img/ICONO_GOTA.png" class="icono-metric" alt="Water saved">
