--- a/nuevapagina.html
+++ b/nuevapagina.html
@@ -352,41 +352,25 @@
         <div id="imageGallery" class="row py-4">
             <!-- Imagen 1 -->
             <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7281.PNG" class="img-fluid w-100 w-lg-75" alt="Bora">
+                <img src="img/nuevapagina_IMG_7281.PNG" class="img-fluid w-100 w-lg-75" alt="Bora">
             </div>
             <!-- Imagen 2 -->
             <div class="col-12  d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7282.PNG" class="img-fluid w-100 w-lg-75" alt="Coral">
+                <img src="img/nuevapagina_IIMG_7282.PNG" class="img-fluid w-100 w-lg-75" alt="Coral">
             </div>
             <!-- Imagen 3 -->
             <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7283.PNG" class="img-fluid w-100 w-lg-75" alt="Aquamarine">
+                <img src="img/nuevapagina_IIMG_7283.PNG" class="img-fluid w-100 w-lg-75" alt="Aquamarine">
             </div>
             <!-- Imagen 4 -->
             <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7284.PNG" class="img-fluid w-100 w-lg-75" alt="Aqua">
+                <img src="img/nuevapagina_IIMG_7284.PNG" class="img-fluid w-100 w-lg-75" alt="Aqua">
             </div>
             <!-- Imagen 5 -->
             <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7285.PNG" class="img-fluid w-100 w-lg-75" alt="Coral">
+                <img src="img/nuevapagina_IIMG_7285.PNG" class="img-fluid w-100 w-lg-75" alt="Coral">
             </div>
-            <!-- Imagen 6 -->
-            <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7286.PNG" class="img-fluid w-100  w-lg-75" alt="Sunkissed">
-            </div>
-            <!-- Imagen 7 -->
-            <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7287.PNG" class="img-fluid w-100 w-lg-75" alt="Coral">
-            </div>
-            <!-- Imagen 8 -->
-            <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7288.PNG" class="img-fluid w-100 w-lg-75" alt="Breeze">
-            </div>
-            <!-- Imagen 9 -->
-            <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-                <img src="img/nuevapagina/IMG_7289.PNG" class="img-fluid w-100 w-lg-75" alt="Bora">
-            </div>
-
+            
         </div>
 
         <!-- Footer -->
@@ -428,29 +412,31 @@
                             UNIRME
                         </button>
 
-                        <!-- MODAL PRIEVBA  -->
+                    
 
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        ...
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-unirme">Save changes</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                       <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Gracias por unirte y ser parte del cambio</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Déjanos tu correo para enterarte de todas las novedades:</p>
+                <div class="mb-3">
+                    <label for="emailInput" class="form-label">Correo Electrónico</label>
+                    <input type="email" class="form-control" id="emailInput" placeholder="nombre@ejemplo.com">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-unirme">Guardar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
