movimiento texto agradecimiento
maybe editarlo es prueba

--- a/nuevapagina.html
+++ b/nuevapagina.html
@@ -363,23 +363,23 @@
                 </button>
             </div>
         </div>
-
-        <!-- CARROUSEL DUPLICADO -->
-         
-         
-        <!-- Mensaje de agradecimiento -->
-<!-- Mensaje de agradecimiento -->
-<div class="container my-5">
+ <!-- Mensaje de agradecimiento -->
+ <div class="container my-5">
     <div class="row">
         <div class="col">
-            <p class="fs-1 text-muted text-justify custom-text">
+            <!-- El texto donde se va a aplicar la animación -->
+            <p id="typed6" class="fs-1 text-muted text-justify custom-text">
                 ¡Gracias por acompañarnos en este recorrido por DEIÁ! Nos encantó que exploraras nuestra colección de bikinis y esperamos haberte inspirado para tu próxima aventura.
             </p>
         </div>
     </div>
 </div>
 
+<!-- Incluir el script de Typed.js -->
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
+<!-- Incluir tu archivo JavaScript -->
+<script src="nuevapagina.js"></script>
 
         <!-- CARROUSEL NUEVO -->
         <!-- Galería de imágenes -->
