bordes en galeria

--- a/nuevapagina.html
+++ b/nuevapagina.html
@@ -113,48 +113,50 @@
             </div>
 
  <!-- CARROUSEL NUEVO -->
-<div class="container my-5">
-    <div class="row justify-content-center">
+<div class="container my-5 py-4">
+    <div class="row justify-content-center g-4">
         <!-- Card 1: Fade Left -->
         <div class="col-md-6 col-lg-4" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="200">
-            <div class="card">
-                <img src="img/nuevapagina_IIMG_7282.PNG" class="card-img-top" alt="Imagen 1">
+            <div class="card p-3 mb-4">
+                <img src="img/nuevapagina_IIMG_7282.PNG" class="card-img-top img-fluid" alt="Imagen 1">
             </div>
         </div>
 
         <!-- Card 2: Fade Right -->
         <div class="col-md-6 col-lg-4" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">
-            <div class="card">
-                <img src="img/nuevapagina_IIMG_7283.PNG" class="card-img-top" alt="Imagen 2">
+            <div class="card p-3 mb-4">
+                <img src="img/nuevapagina_IIMG_7283.PNG" class="card-img-top img-fluid" alt="Imagen 2">
             </div>
         </div>
 
         <!-- Card 3: Fade Left -->
         <div class="col-md-12 col-lg-4" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="200">
-            <div class="card">
-                <img src="img/chicasssss.jpg" class="card-img-top" alt="Imagen 3">
+            <div class="card p-3 mb-4">
+                <img src="img/chicasssss.jpg" class="card-img-top img-fluid" alt="Imagen 3">
             </div>
         </div>
 
-         <!-- Card 4: Fade Left -->
-         <div class="col-md-12 col-lg-4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-            <div class="card">
-                <img src="img/nuevapagina_IIMG_7288.PNG" class="card-img-top" alt="Imagen 3">
-            </div>
-        </div>
-        <!-- Card 3: Fade Left -->
+        <!-- Card 4: Fade Up -->
         <div class="col-md-12 col-lg-4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-            <div class="card">
-                <img src="img/nuevapagina_IIMG_7285.PNG" class="card-img-top" alt="Imagen 3">
-            </div>
-        </div>
-         <!-- Card 3: Fade Left -->
-         <div class="col-md-12 col-lg-4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
-            <div class="card">
-                <img src="img/nuevapagina_IIMG_7287.PNG" class="card-img-top" alt="Imagen 3">
+            <div class="card p-3 mb-4">
+                <img src="img/nuevapagina_IIMG_7288.PNG" class="card-img-top img-fluid" alt="Imagen 4">
             </div>
         </div>
 
+        <!-- Card 5: Fade Up -->
+        <div class="col-md-12 col-lg-4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+            <div class="card p-3 mb-4">
+                <img src="img/nuevapagina_IIMG_7285.PNG" class="card-img-top img-fluid" alt="Imagen 5">
+            </div>
+        </div>
+
+        <!-- Card 6: Fade Up -->
+        <div class="col-md-12 col-lg-4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+            <div class="card p-3 mb-4">
+                <img src="img/nuevapagina_IIMG_7287.PNG" class="card-img-top img-fluid" alt="Imagen 6">
+            </div>
+        </div>
+    </div>
 </div>
 
         <!-- Subtítulo con animación -->
