NUEVOS ARREGLOS EN UNIRSE, RESPONSIVE, COLORES, Y ARREGLO DE GALERIA IMAGENES

--- a/index.html
+++ b/index.html
@@ -446,50 +446,7 @@
                     <p class="footer-link">Prensa y RRPP</p>
                 </div>
 
-                <!-- Sección de "Newsletter y Redes sociales" -->
-                <div class="col-md-3">
-                    <p>Suscríbete para descubrir nuevos lanzamientos y ofertas exclusivas. 10% de descuento en tu
-                        primera compra.</p>
-
-                    <!-- Botón que abre el modal -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        UNIRME
-                    </button>
-
-                    <!-- MODAL PRIEVBA  -->
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                    <!-- Redes sociales -->
-                    <ul class="list-unstyled d-flex gap-2">
-                        <li><i class="fab fa-facebook social-media-icon"></i></li>
-                        <li><i class="fab fa-instagram social-media-icon"></i></li>
-                        <li><i class="fas fa-envelope social-media-icon"></i></li>
-                    </ul>
-                </div>
-            </div>
+                
 
             <!-- Copyright -->
             <div class="text-center mt-5">
@@ -499,18 +456,17 @@
     </footer>
 
 
-
-
-
-
     <!-- Bootstrap JS, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <script src="script.js"></script>
     <!-- AOS JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
     <script>
+
         // Inicializar AOS
         AOS.init({
             duration: 1000, // Duración de la animación en milisegundos
